# deodap-mcp-dashboard

./: .dockerignore  .gitignore  Dockerfile  MCP_DATA_MAPPING.md  README.md  docker-compose.yml
Web/backend/: .env.example  .gitignore  alembic.ini  pyproject.toml  requirements.txt
Web/backend/alembic/: env.py
Web/backend/alembic/versions/: 0001_initial_structure.py
Web/backend/app/: main.py
Web/backend/app/api/: deps.py
Web/backend/app/auth/: roles.py
Web/backend/app/core/: config.py  security.py
Web/backend/app/database/: session.py
Web/backend/app/middleware/: error_handler.py  hardening.py  perf.py  request_id.py
Web/backend/app/models/: __init__.py  base.py  entities.py
Web/backend/app/schemas/: auth.py  bills.py  cod.py  common.py  couriers.py  dashboard.py  discrepancies.py  dispute_lines.py  export.py  reconciliation.py  recovery.py  savings.py  settings.py  sla.py  status.py  trend.py  users.py  weight.py  zones.py
Web/backend/app/services/: auth_service.py  bills_service.py  cod_service.py  courier_service.py  dashboard_service.py  date_windows.py  discrepancy_service.py  export_service.py  live_support.py  mcp_client.py  order_sampling.py  profile_service.py  recovery_service.py  savings_service.py  settings_service.py  sla_service.py  status_service.py  trend_service.py  user_store.py  users_service.py  weight_service.py  zone_service.py
Web/backend/app/utils/: mock.py
Web/backend/scripts/: generate_mock_data.py
Web/backend/tests/: conftest.py  test_api.py  test_health.py  test_scheduler.py  test_security.py  test_unit.py
(+143 files in other folders)
